<resources>
    <string name="decry">解密</string>

    <string name="encry">加密</string>

    <string name="app_name">MDT</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur magna tortor, semper eu feugiat eu, vehicula vitae lacus.</string>
    <string name="lorem_ipsum_large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed ultricies risus. Integer nisi orci, lacinia sit amet mi in, mollis scelerisque purus. Nunc risus ligula, maximus eu orci a, facilisis dictum velit. Proin nec laoreet magna. Nulla ut sagittis lorem. Morbi id enim fermentum, semper diam et, tempus leo. Aliquam vel congue orci. Suspendisse potenti. Curabitur finibus diam augue, vel bibendum sapien ultrices non.</string>
    <string name="navigation_drawer_open">Navigation open</string>
    <string name="navigation_drawer_close">Navigation close</string>

    <string name="long_press_to_copy_result">长按复制结果</string>
    <string name="input_text">输入文字</string>
    <string name="contents">内容</string>
    <string name="click_to_create">点击生成</string>
    <string name="click_to_save">点击保存</string>
    <string name="scan_failed">扫描失败</string>
    <string name="auto_color">自动选择颜色</string>
    <string name="barcode_size">大小(像素)</string>
    <string name="margin_px">内边距(像素)</string>
    <string name="data_dot_scale"><![CDATA[数据点缩放(0<数值<1.0f)]]></string>
    <string name="colordark_true_dots_dddddd">暗点颜色(真值点, #rrggbb)</string>
    <string name="colorlight_false_dots_dddddd">亮点颜色(假值点, #rrggbb)</string>
    <string name="select_image">选择图片</string>
    <string name="remove_image">移除图片</string>
    <string name="white_margin_on_background_image">给图片添加白色边框</string>
    <string name="binarize_background_image">背景图转换为黑白图片</string>
    <string name="binNumber"><![CDATA[转换阀值(0<值<255)]]></string>
    <string name="Background_image_removed">背景图移除成功</string>
    <string name="Background_image_added">背景图添加成功</string>
    <string name="qr_without_logo">未选择图片，将会生成普通QR二维码</string>
    <string name="select_barcode_format">选择二维码类型</string>
    <string name="format_tip">Logo二维码仅适用于QRcode,仅QRcode和PDF417可以保存中文</string>
    <string name="crop_square">裁剪图片为正方形</string>
    <string name="use_first_frame_size">第一帧尺寸作为gif尺寸</string>
    <string name="frame_delay">帧延迟(ms)</string>
    <string name="no_bg_img">未选择背景图</string>
    <string name="select_gif">选择gif</string>
    <string name="create_gif">生成gif</string>
    <string name="size">大小(像素)</string>
    <string name="no_camera_permission">请允许访问摄像头后重试</string>
    <string name="scan_tip">将二维码置于框内即自动扫描</string>
    <string name="create_awesomeqr">生成AwesomeQR</string>
    <string name="read_screenshot">自动读取屏幕截图中的二维码</string>

    <string name="link">输入ID或链接</string>
    <string name="maybe_need_login">读取失败，可能需要登录</string>
    <string name="file_exist">文件已存在:</string>
    <string name="get_all_pictures">这是画师的ID</string>
    <string name="fafafa">发 发 发</string>

    <string name="input_model_id">输入模型id</string>
    <string name="generate_voice">开始合成</string>
    <string name="start_calculate">开始计算</string>
    <string name="flashlight">flashlight</string>
    <string name="back_tasks">后台任务</string>
    <string name="no_support_tts">本设备不支持TTS</string>
    <string name="ok">确定</string>
    <string name="name">名称:</string>
    <string name="at_slot">所在位置:</string>
    <string name="cancel">取消</string>

    <!-- 插件入口标签 -->
    <string name="plugin_gray_image">灰度图</string>
    <string name="plugin_barcode_generator">条码生成</string>
    <string name="plugin_barcode_reader">条码读取</string>
    <string name="plugin_gif_creator">合成GIF</string>
    <string name="plugin_pixiv_download">PIXIV下载</string>
    <string name="plugin_picture_crypt">图片加解密</string>
    <string name="plugin_saucenao">SauceNAO搜图</string>

</resources>
