<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ran="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ScrollView
		android:id="@+id/qr_mainScrollView"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<com.meng.mediatool.tools.MaterialDesign.MDEditText
				android:id="@+id/qr_mengEditText_content"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				ran:hint="@string/input_text"
				ran:default_value="content"/>

			<com.meng.mediatool.tools.MaterialDesign.MDEditText
				android:id="@+id/qr_mengEditText_size"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				ran:hint="@string/size"
				ran:default_value="500"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:gravity="center"
					android:layout_weight="0.8"
					android:layout_width="0dp"
					android:layout_height="fill_parent"
					android:text="@string/select_barcode_format"/>

				<Spinner
					android:layout_weight="1"
					android:id="@+id/qr_main_spinner"
					android:layout_width="0dp"
					android:layout_height="fill_parent"
					android:entries="@array/barcode_format"/>

				<ImageView
					android:id="@+id/barcode_mainImageView_tip"
					android:layout_weight="0"
					android:src="@android:drawable/ic_menu_info_details"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

			</LinearLayout>

			<LinearLayout
                android:orientation="vertical"
				android:id="@+id/barcode_mainLinearLayout_for_qr"
				android:layout_height="wrap_content"
				android:layout_width="match_parent">

				<TextView
					android:id="@+id/qr_main_imgPathTextView"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/qr_without_logo"/>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

					<Button
						android:id="@+id/qr_ButtonSelectImage"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/select_image"/>

					<Button
						android:id="@+id/qr_ButtonRemoveImage"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/remove_image"/>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

					<CheckBox
						android:id="@+id/qr_main_autoColor"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:checked="true"
						android:text="@string/auto_color"/>

					<CheckBox
						android:id="@+id/qr_main_crop"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:checked="true"
						android:text="@string/crop_square"/>

				</LinearLayout>

			</LinearLayout>

			<com.meng.mediatool.tools.mengViews.MengColorBar
				android:id="@+id/gif_arb_qr_main_colorBar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:visibility="gone"/>

			<Button
				android:id="@+id/qr_ButtonCreate"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/click_to_create"/>

			<Button
				android:id="@+id/qr_ButtonSave"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/click_to_save"
				android:visibility="gone"/>

			<ImageView
				android:id="@+id/qr_imageview"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:scaleType="centerInside"/>

		</LinearLayout>

	</ScrollView>

</RelativeLayout>

