<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<RadioGroup
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<RadioButton
				android:checked="true"
				android:text="@string/encry"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/picture_cryptRadioGroup_encry"/>

			<RadioButton
				android:text="@string/decry"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/picture_cryptRadioGroup_decry"/>

		</RadioGroup>

		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:id="@+id/picture_cryptButton_read_gallery"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="选择图片"/>

		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:id="@+id/picture_cryptButton_save"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/click_to_save"
			android:visibility="gone"/>

		<ImageView
			android:id="@+id/picture_cryptImageView"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:scaleType="centerInside"/>

	</LinearLayout>

</ScrollView>

