<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout
		android:id="@+id/read_galleryLinearLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_alignParentBottom="true">

		<TextView
			android:id="@+id/read_galleryTextView_format"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

		<TextView
			android:id="@+id/read_galleryTextView_result"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autoLink="all"
			android:enabled="true"
			android:focusable="true"
			android:longClickable="true"
			android:text="@string/long_press_to_copy_result"
			android:textIsSelectable="true"/>

		<Button
			android:id="@+id/read_galleryButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/select_image"/>

		<Button
			android:id="@+id/read_galleryButton_createAwesomeQR"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/create_awesomeqr"/>

	</LinearLayout>

	<fragment
		android:id="@+id/read_galleryfragment"
		android:name="com.meng.mediatool.picture.barcode.BarcodeReaderCamera"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:layout_above="@id/read_galleryLinearLayout"/>

</RelativeLayout>

